# eg25debugger

./: CMakeLists.txt  HomeScreen.qml  Main.qml  SimUnlock.qml  at_commands.h  eg25connection.cpp  eg25connection.h  main.cpp
at_commands/: name.sh
at_commands/Audio/: AT+CLVL  AT+CMUT  AT+QACDBDEL  AT+QACDBLOAD  AT+QACDBREAD  AT+QAUDCFG  AT+QAUDLOOP  AT+QAUDMOD  AT+QAUDPLAY  AT+QAUDPLAYGAIN  AT+QAUDRD  AT+QAUDRDGAIN  AT+QDAI  AT+QEEC  AT+QIIC  AT+QLDTMF  AT+QLTONE  AT+QMIC  AT+QPSND  AT+QRXGAIN  AT+QSIDET  AT+QTONEDET  AT+QTTS  AT+QTTSETUP  AT+QWDTMF  AT+QWTTS  AT+VTD  AT+VTS
at_commands/Call/: +++  AT+CBST  AT+CHUP  AT+CLCC  AT+CR  AT+CRC  AT+CRLP  AT+CSTA  AT+CVHU  AT+QCHLDIPMPTY  AT+QECCNUM  AT+QHUP  ATA  ATD  ATH  ATO  ATS0  ATS10  ATS12  ATS6  ATS7  ATS8  AT^DSCI
at_commands/FTP/: AT+QFTPCLOSE
at_commands/GNSS/: AT+QGPSEND
at_commands/General/: AT&F  AT&V  AT&W  AT+CFUN  AT+CGMI  AT+CGMM  AT+CGMR  AT+CGSN  AT+CMEE  AT+CSCS  AT+GMM  AT+GMR  AT+GSN  AT+QAPRDYIND  AT+QDIAGPORT  AT+QURCCFG  ATE  ATI  ATQ  ATS3  ATS4  ATS5  ATV  ATX  ATZ
at_commands/Hardware/: AT+CBC  AT+CCLK  AT+QADC  AT+QPOWD  AT+QSCLK
at_commands/MMS/: AT+QMMSEDIT
at_commands/Network/: AT+CIND  AT+COPN  AT+COPS  AT+CPOL  AT+CREG  AT+CSQ  AT+CTZR  AT+CTZU  AT+QENG  AT+QFPLMNCFG  AT+QLTS  AT+QNETINFO  AT+QNWINFO  AT+QNWLOCK  AT+QOPS  AT+QOPSCFG  AT+QSPN
at_commands/Packet/: AT$QCRMCALL  AT+CEREG  AT+CGACT  AT+CGATT  AT+CGCLASS  AT+CGCONTRDP  AT+CGDATA  AT+CGDCONT  AT+CGEQMIN  AT+CGEQREQ  AT+CGEREP  AT+CGPADDR  AT+CGQMIN  AT+CGQREQ  AT+CGSMS  AT+QAUGDCNT  AT+QGDCNT  AT+QNETDEVSTATUS
(+64 files in other folders)
